chore: add logic to retrieve session data from Open F1 API